[gd_scene load_steps=17 format=2]

[ext_resource path="res://soldier_quad.shader" type="Shader" id=1]
[ext_resource path="res://projection_decal.shader" type="Shader" id=2]
[ext_resource path="res://send_camera.gd" type="Script" id=3]
[ext_resource path="res://soldier.gd" type="Script" id=4]
[ext_resource path="res://dark_grey.material" type="Material" id=5]
[ext_resource path="res://mid_grey.material" type="Material" id=6]

[sub_resource type="CubeMesh" id=9]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="CylinderMesh" id=2]

[sub_resource type="CubeMesh" id=8]

[sub_resource type="CubeMesh" id=11]
size = Vector3( 2, 0.5, 2 )

[sub_resource type="ViewportTexture" id=7]
viewport_path = NodePath("SoldierViewport")

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/DepthCamXForm = null
shader_param/ViewConeAngle = 60.0
shader_param/ViewDistance = 8.0
shader_param/DepthTexture = SubResource( 7 )

[sub_resource type="CubeMesh" id=10]
size = Vector3( 0.2, 1.6, 0.2 )

[sub_resource type="QuadMesh" id=3]
size = Vector2( 2, 2 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 1 )

[node name="World" type="Spatial"]
script = ExtResource( 3 )

[node name="Geometry" type="Spatial" parent="."]

[node name="GroundStep" type="MeshInstance" parent="Geometry"]
transform = Transform( 2.87986, 0, 0, 0, 0.110966, 0, 0, 0, 2.87986, -1.43978, -0.123428, -0.0895391 )
mesh = SubResource( 9 )
skeleton = NodePath("../..")
material/0 = ExtResource( 6 )

[node name="GroundStep2" type="MeshInstance" parent="Geometry"]
transform = Transform( 5.62188, 0, 0, 0, 0.110966, 0, 0, 0, 3.76568, -3.65921, -0.224816, 0.326667 )
mesh = SubResource( 9 )
skeleton = NodePath("../..")
material/0 = ExtResource( 5 )

[node name="GroundStep3" type="MeshInstance" parent="Geometry"]
transform = Transform( 1.06345, 0, 0.96701, 0, 0.230919, 0, -0.282565, 0, 3.6394, 3.84551, -0.224816, -3.54663 )
mesh = SubResource( 9 )
skeleton = NodePath("../..")
material/0 = ExtResource( 5 )

[node name="GroundStep4" type="MeshInstance" parent="Geometry"]
transform = Transform( 0.160039, 0, 0.71716, 0, 0.869412, 0, -0.209558, 0, 0.547695, -5.09425, 0.361935, -2.23546 )
mesh = SubResource( 9 )
skeleton = NodePath("../..")
material/0 = ExtResource( 5 )

[node name="GroundPlane2" type="MeshInstance" parent="Geometry"]
transform = Transform( 20, 0, 0, 0, 1, 0, 0, 0, 20, 0, -0.324394, 0 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = ExtResource( 6 )

[node name="Pillar1" type="MeshInstance" parent="Geometry"]
transform = Transform( 0.2, 0, 0, 0, 1, 0, 0, 0, 0.2, 2, 0, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("../..")
material/0 = null

[node name="Box" type="MeshInstance" parent="Geometry"]
transform = Transform( 0.732116, 0.605194, -0.312643, -0.384924, 0.746226, 0.543121, 0.561996, -0.277284, 0.779278, -0.529661, 0, -2.92297 )
mesh = SubResource( 8 )
skeleton = NodePath("../..")
material/0 = null
__meta__ = {
"_editor_description_": "e"
}

[node name="Pillar4" type="MeshInstance" parent="Geometry"]
transform = Transform( -0.315545, 0, 0, 0, 1.08838, 0, 0, 0, -0.572288, 1.45653, -0.796321, -0.905485 )
mesh = SubResource( 2 )
skeleton = NodePath("../..")
material/0 = null

[node name="Pillar3" type="MeshInstance" parent="Geometry"]
transform = Transform( 0.2, 0, 0, 0, 0.0216877, -0.199812, 0, 0.499529, 0.00867506, 0.912157, 0.259043, 2.41584 )
mesh = SubResource( 2 )
skeleton = NodePath("../..")
material/0 = null

[node name="Pillar2" type="MeshInstance" parent="Geometry"]
transform = Transform( 0.2, 0, 0, 0, 1, 0, 0, 0, 0.2, -2, -0.691496, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("../..")
material/0 = null

[node name="SoldierPosition" type="Spatial" parent="."]
transform = Transform( 0.126389, 0, -0.991981, 0, 1, 0, 0.991981, 0, 0.126389, -0.764712, 0, -0.850748 )
script = ExtResource( 4 )

[node name="ViewConeDisplay" type="MeshInstance" parent="SoldierPosition"]
transform = Transform( 3.53553, 0, 3.53553, 0, 1, 0, -3.53553, 0, 3.53553, 0.0154065, -0.100594, -7.00764 )
layers = 4
mesh = SubResource( 11 )
skeleton = NodePath("../..")
material/0 = SubResource( 6 )

[node name="CameraOffset" type="Spatial" parent="SoldierPosition"]
transform = Transform( 1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 1, 0 )

[node name="RemoteTransform" type="RemoteTransform" parent="SoldierPosition/CameraOffset"]
remote_path = NodePath("../../../SoldierViewport/SoldierCamera")
update_scale = false

[node name="SoldierStandin" type="MeshInstance" parent="SoldierPosition"]
transform = Transform( 1, 0, -4.47035e-08, 0, 1, 0, 4.47035e-08, 0, 1, 0, 0.839279, 0 )
layers = 4
mesh = SubResource( 10 )
material/0 = null

[node name="SoldierViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
handle_input_locally = false
debanding = true
keep_3d_linear = true

[node name="SoldierCamera" type="Camera" parent="SoldierViewport"]
transform = Transform( 0.126389, 0.172255, -0.97691, 0, 0.984808, 0.173648, 0.991981, -0.0219472, 0.124469, -0.764712, 1, -0.850748 )
cull_mask = 1048571
fov = 90.0
near = 0.1

[node name="FullscreenQuad" type="MeshInstance" parent="SoldierViewport/SoldierCamera"]
visible = false
layers = 2
cast_shadow = 0
extra_cull_margin = 1.0
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.995924, 0.0812439, 0.0391723, -0.0808949, 0.612526, 0.7863, 0.039888, -0.786264, 0.616602, 0.606873, 4.77933, 3.7771 )
cull_mask = 1048573
near = 0.1

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.908485, 5.86834, 1.1198 )
light_energy = 1.846
shadow_enabled = true
omni_range = 18.3584

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI"]
margin_left = 8.0
margin_top = 7.0
margin_right = 145.0
margin_bottom = 21.0
text = "Press SPACE to rotate"
